@@ -7,6 +7,7 @@ import static org.mockito.Mockito.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,33 +23,79 @@ class StudentServiceTest {
     private Student firstStudent = Student.builder()
             .name("1")
             .rating(10)
-            .exams(Arrays.asList(Exam.of(Exam.Type.ENGLISH, 181)))
+            .exams(List.of(Exam.of(Type.MATH, 181)))
             .build();
     private Student secondStudent = Student.builder()
             .name("2")
             .rating(11)
-            .exams(Arrays.asList(Exam.of(Exam.Type.ENGLISH, 182),
+            .exams(Arrays.asList(
+                    Exam.of(Exam.Type.ENGLISH, 182),
                     Exam.of(Exam.Type.MATH, 190)))
             .build();
-    private Student thirdStudent =
-            Student.builder()
-                    .name("3")
-                    .rating(11)
-                    .exams(Arrays.asList(Exam.of(Exam.Type.ENGLISH, 183),
-                            Exam.of(Exam.Type.MATH, 190)))
-                    .build();
+    private Student thirdStudent = Student.builder()
+            .name("3")
+            .rating(11)
+            .exams(Arrays.asList(
+                    Exam.of(Exam.Type.ENGLISH, 183),
+                    Exam.of(Exam.Type.MATH, 190)))
+            .build();
     private Student fourthStudent = Student.builder()
             .name("4")
             .rating(11)
-            .exams(Arrays.asList())
+            .exams(List.of())
+            .build();
+    private Student fifthStudent = Student.builder()
+            .name("5")
+            .rating(12)
+            .exams(Arrays.asList(
+                    Exam.of(Exam.Type.ENGLISH, 180),
+                    Exam.of(Exam.Type.MATH, 130)))
             .build();
 
     private StudentRepository createStudentRepositoryWithAllStudents() {
         StudentRepository studentRepository = mock(StudentRepository.class);
         List<Student> allStudents = Arrays.asList(firstStudent, secondStudent,
-                thirdStudent, fourthStudent);
+                thirdStudent, fourthStudent, fifthStudent);
         when(studentRepository.findAll()).thenReturn(allStudents);
         return studentRepository;
+    }
+
+    @Test
+    void should_find_students_without_exams() {
+        StudentRepository studentRepository = createStudentRepositoryWithAllStudents();
+        StudentService studentService = new StudentService(studentRepository);
+        List<Student> actual = studentService.findWithoutExams();
+        assertEquals(List.of(fourthStudent), actual);
+    }
+
+    @Test
+    void should_find_students_with_num_of_exams() {
+        StudentRepository studentRepository = createStudentRepositoryWithAllStudents();
+        StudentService studentService = new StudentService(studentRepository);
+        int numOfExams = 2;
+
+        List<Student> actual = studentService.findWithNumberOfExams(numOfExams);
+        assertEquals(List.of(secondStudent, thirdStudent, fifthStudent), actual);
+    }
+
+    @Test
+    void should_find_passed_exams_with_score_more_than() {
+        StudentRepository studentRepository = createStudentRepositoryWithAllStudents();
+        StudentService studentService = new StudentService(studentRepository);
+
+        List<Student> actual = studentService.findPassedExamsWithMoreThan(new HashSet<>(Arrays.asList(Exam.Type.ENGLISH, Exam.Type.MATH)), 182);
+
+        assertEquals(List.of(secondStudent, thirdStudent), actual);
+    }
+
+    @Test
+    void should_find_passed_better_than_average_and_passed() {
+        StudentRepository studentRepository = createStudentRepositoryWithAllStudents();
+        StudentService studentService = new StudentService(studentRepository);
+
+        List<Student> actual = studentService.findPassedBetterThanAvgAndPassed(Type.MATH, Type.ENGLISH);
+
+        assertEquals(List.of(secondStudent, thirdStudent), actual);
     }
 
     @Test
@@ -57,32 +104,5 @@ class StudentServiceTest {
         StudentService studentService = new StudentService(studentRepository);
         Optional<Student> studentOpt = studentService.findWithMaxExam(Type.ENGLISH);
         assertEquals(Optional.of(thirdStudent), studentOpt);
-    }
-
-    @Test
-    void should_not_find_student_with_max_math() {
-        StudentRepository studentRepository = mock(StudentRepository.class);
-        when(studentRepository.findAll()).thenReturn(Arrays.asList(firstStudent, fourthStudent));
-        StudentService studentService = new StudentService(studentRepository);
-        Optional<Student> studentOpt = studentService.findWithMaxExam(Type.MATH);
-        assertEquals(Optional.empty(), studentOpt);
-    }
-
-    @Test
-    void should_find_students_who_have_enough_math_grade() {
-        StudentRepository studentRepository = createStudentRepositoryWithAllStudents();
-        StudentService studentService = new StudentService(studentRepository);
-        final double mathPassRate = 190.0;
-        List<Student> studentsWithMath = studentService.findWithEnoughExam(Type.MATH, mathPassRate);
-        assertThat(studentsWithMath, containsInAnyOrder(secondStudent, thirdStudent));
-    }
-
-    @Test
-    void should_not_find_students_who_have_enough_english_grade() {
-        StudentRepository studentRepository = createStudentRepositoryWithAllStudents();
-        StudentService studentService = new StudentService(studentRepository);
-        final double englishPassRate = 190.0;
-        List<Student> studentsWithEnglish = studentService.findWithEnoughExam(Type.ENGLISH, englishPassRate);
-        assertThat(studentsWithEnglish, hasSize(0));
     }
 }
